# PythonDRF

./: .env.example  Pipfile  pyproject.toml  requirements.txt
apps/auth/: serializers.py  urls.py  views.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_alter_autoparkmodel_options.py
apps/cars/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/choices/: body_types_choices.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_auto_park.py  0003_alter_carmodel_options_carmodel_body.py  0004_alter_carmodel_brand_alter_carmodel_price_and_more.py
apps/users/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_profilemodel_avatar_alter_usermodel_is_active.py  0002_alter_usermodel_options_alter_profilemodel_age_and_more.py  0003_remove_profilemodel_avatar_avatarmodel.py  0004_alter_avatarmodel_image.py
cars/: filter.py  models.py  serializers.py  urls.py  views.py
cars/migrations/: 0001_initial.py
config/: settings.py  urls.py
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  rest_conf.py
core/: pagination.py
core/enums/: action_token_enum.py  regex_enum.py
core/permissions/: __init__.py  is_super_user.py
core/services/: email_service.py  jwt_service.py  upload_avatar_service.py
templates/: recovery_password.html  register.html  test_email.html
